--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
 
     <script>
       async function init() {
-        const defaultUrl = "https%3A%2F%2Famg01269-amg01269c1-willowtv-us-5479.playouts.now.amagi.tv%2Fplaylist%2Famg01269-willowtvfast-willowplus-willowtvus%2Fplaylist.m3u8";
+        const defaultUrl = "https://amg01269-amg01269c1-willowtv-us-5479.playouts.now.amagi.tv/playlist/amg01269-willowtvfast-willowplus-willowtvus/playlist.m3u8";
         const urlParams = new URLSearchParams(window.location.search);
         const manifestUri = urlParams.get('url') || defaultUrl;
 
