--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     <h1>CricTv</h1>
     <div class="file-container">
         <div class='directory-item'>
-            <a href='https://live.drmlive.in/sliv/'><img src='Sliv.png' alt='Sonyliv'></a>
-            <a href='https://live.drmlive.in/sliv/'>Sonyliv</a></div>
+            <a href='https://cricstream4u.github.io/sports-18/'><img src='Sports18_1_HD.png' alt='Sonyliv'></a>
+            <a href='https://cricstream4u.github.io/sports-18/'>Sports 18</a></div>
         
         <div class='directory-item'>
             <a href='https://live.drmlive.in/zee5/'><img src='zee5.png' alt='Zee5'></a>
