--- a/index.html
+++ b/index.html
@@ -120,8 +120,8 @@
             <a href='https://cricstream4u.github.io/sports-18/'>Sports 18</a></div>
         
         <div class='directory-item'>
-            <a href='https://live.drmlive.in/zee5/'><img src='zee5.png' alt='Zee5'></a>
-            <a href='https://live.drmlive.in/zee5/'>Zee5</a></div>
+            <a href='https://cricstream4u.github.io/starsports-hindi/'><img src='Star Sports1 Hindi.jpg' alt='Zee5'></a>
+            <a href='https://cricstream4u.github.io/starsports-hindi/'>Star Sports Hindi</a></div>
         
         <div class='directory-item'>
             <a href='https://live.drmlive.in/jiotv/'><img src='jiotv.ico' alt='JioTV Web'></a>
