--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
             <a href='https://cricstream4u.github.io/starsports-hindi/'>Star Sports Hindi</a></div>
         
         <div class='directory-item'>
-            <a href='https://live.drmlive.in/jiotv/'><img src='jiotv.ico' alt='JioTV Web'></a>
-            <a href='https://live.drmlive.in/jiotv/'>JioTV Web</a></div>
+            <a href='https://cricstream4u.github.io/Jiohotstar/'><img src='Jiohotstar.jpg' alt='JioTV Web'></a>
+            <a href='https://cricstream4u.github.io/Jiohotstar/'>Jiohotstar</a></div>
         
         <div class='directory-item'>
             <a href='https://live.drmlive.in/yupptvpremium/'><img src='yupptv.jpg' alt='YuppTV Premium'></a>
