--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <h1>CricTv</h1>
     <div class="file-container">
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/sports-18/'><img src='Sports18_1_HD.png' alt='Sonyliv'></a>
+            <a href='https://cricstream4u.github.io/sports-18/'><img src='Sports 18.jpg' alt='Sonyliv'></a>
             <a href='https://cricstream4u.github.io/sports-18/'>Sports 18</a></div>
         
         <div class='directory-item'>
