--- a/starsports2hindi.html
+++ b/starsports2hindi.html
@@ -171,7 +171,7 @@
     }
 
     // Retrieve the 'file' parameter from the URL, or use the default URL if none is provided
-    const hlsStreamUrl = getQueryParam("file") || "https://vkvsd232.okcdn.ru/hls/8095454923306.m3u8/sig/kHk8MkIHWk4/expires/1741524868648/srcIp/176.227.240.21/urls/185.226.55.85/clientType/14/srcAg/CHROME_ANDROID/mid/9617533840170/video.m3u8?p";
+    const hlsStreamUrl = getQueryParam("file") || "https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1742807052~acl=%2f*~data=hdntl~hmac=899e942071cabbfe1bc1a04c946ba1896550756b93349971ecb7e55e103ad263/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8";
 
     // Initialize JW Player
     const playerInstance = jwplayer("jwplayerDiv");
