--- a/index.html
+++ b/index.html
@@ -116,8 +116,8 @@
     <h1>CricTv</h1>
     <div class="file-container">
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/sports-18/'><img src='Sports 18.jpg' alt='Sports 18'></a>
-            <a href='https://cricstream4u.github.io/sports-18/'>Sports 18</a></div>
+            <a href='starsports2hindi.html'><img src='Sports 18.jpg' alt='Star Sports 2'></a>
+            <a href='starsports2hindi.html'>Star Sports 2</a></div>
         <!---
         <div class='directory-item'>
             <a href='https://cricstream4u.github.io/starsports-hindi/'><img src='Star Sports1 Hindi.jpg' alt='Zee5'></a>
