--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
             <a href='starsports2hindi.html'>Star Sports 2</a></div>
         
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/starsports1hd.html/'><img src='Star1hd.jpg' alt='Star 1 HD'></a>
+            <a href='https://cricstream4u.github.io/starsports1hd.html/'><img src='star1hd.jpg' alt='Star 1 HD'></a>
             <a href='https://cricstream4u.github.io/starsports1hd.html/'>Star Sports 1 HD</a></div>
         
         <div class='directory-item'>
