--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
 </head>
 <body>
     <a href="https://t.me/cric_stream" class="telegram-toggle">Join Telegram</a>
-    <h1>CricTv</h1>
+    <h1>CineArena</h1>
     <div class="file-container">
         <div class='directory-item'>
             <a href='starsports2hindi.html'><img src='star2.jpg' alt='Star Sports 2'></a>
