--- a/index.html
+++ b/index.html
@@ -117,11 +117,11 @@
     <div class="file-container">
         <div class='directory-item'>
             <a href='starsports2hindi.html'><img src='star2.jpg' alt='Star Sports 2'></a>
-            <a href='starsports2hindi.html'>Star Sports 2</a></div>
+            <a href='starsports2hindi.html'>Star Sports 2 Hindi</a></div>
         
         <div class='directory-item'>
             <a href='starsports1hd.html'><img src='star1hd.jpg' alt='Star 1 HD'></a>
-            <a href='starsports1hd.html'>Star Sports 1 HD</a></div>
+            <a href='starsports1hd.html'>Star Sports 1 Eng</a></div>
         
         <div class='directory-item'>
             <a href='willowsports.html'><img src='willowsports.jpg' alt='Willow Sports'></a>
