--- a/index.html
+++ b/index.html
@@ -116,8 +116,13 @@
     <h1>CineArena</h1>
     <div class="file-container">
         <div class='directory-item'>
+            <a href='willow2.html'><img src='willow2.webp' alt='Willow 2'></a>
+            <a href='willow2.html'>Willow 2 Hindi</a></div>
+
+        
+        <div class='directory-item'>
             <a href='starsports2hindi.html'><img src='star2.jpg' alt='Star Sports 2'></a>
-            <a href='starsports2hindi.html'>Star Sports 2 Hindi</a></div>
+            <a href='starsports2hindi.html'>Star Sports 2</a></div>
         
         <div class='directory-item'>
             <a href='starsports1hd.html'><img src='star1hd.jpg' alt='Star 1 HD'></a>
