--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
     <h1>CineArena</h1>
     <div class="file-container">
         <div class='directory-item'>
-            <a href='willow2.html'><img src='willow2.webp' alt='Willow 2'></a>
+            <a href='willow2.html'><img src='willow2hindi.jpg' alt='Willow 2'></a>
             <a href='willow2.html'>Willow 2 Hindi</a></div>
 
         
