--- a/willow2.html
+++ b/willow2.html
@@ -171,7 +171,7 @@
     }
 
     // Retrieve the 'file' parameter from the URL, or use the default URL if none is provided
-    const hlsStreamUrl = getQueryParam("file") || "https://customer-0agod1prlrzpzm4j.cloudflarestream.com/bd4f2a7e5c120843b0c06f9bb992fec9/manifest/video.m3u8";
+    const hlsStreamUrl = getQueryParam("file") || "https://channel6.csports.tv/1529157792/index.m3u8";
 
     // Initialize JW Player
     const playerInstance = jwplayer("jwplayerDiv");
