--- a/index.html
+++ b/index.html
@@ -119,7 +119,11 @@
             <a href='willow2.html'><img src='willow2hindi.jpg' alt='Willow 2'></a>
             <a href='willow2.html'>Willow 2 Hindi</a></div>
 
-        
+        <div class="file-container">
+        <div class='directory-item'>
+            <a href='willow2eng.html'><img src='willow2hindi.jpg' alt='Willow 2'></a>
+            <a href='willow2eng.html'>Willow 2 English</a></div>
+            
         <div class='directory-item'>
             <a href='starsports2hindi.html'><img src='star2.jpg' alt='Star Sports 2'></a>
             <a href='starsports2hindi.html'>Star Sports 2</a></div>
