--- a/index.html
+++ b/index.html
@@ -116,12 +116,12 @@
     <h1>CineArena</h1>
     <div class="file-container">
         <div class='directory-item'>
-            <a href='willow2.html'><img src='willow2hindi.jpg' alt='Willow 2'></a>
+            <a href='willow2.html'><img src='willow2hin.jpg' alt='Willow 2'></a>
             <a href='willow2.html'>Willow 2 Hindi</a></div>
 
         <div class="file-container">
         <div class='directory-item'>
-            <a href='willow2eng.html'><img src='willow2hindi.jpg' alt='Willow 2'></a>
+            <a href='willow2eng.html'><img src='willow2eng.jpg' alt='Willow 2'></a>
             <a href='willow2eng.html'>Willow 2 English</a></div>
             
         <div class='directory-item'>
