--- a/index.html
+++ b/index.html
@@ -127,8 +127,8 @@
             <a href='willow2eng.html'>Willow 2 English</a></div>
             -->
         <div class='directory-item'>
-            <a href='starsports1hindi.html'><img src='star1hd.jpg' alt='Star 1 HD'></a>
-            <a href='starsports1hindi.html'>Star Sports 1 Hindi</a></div>
+            <a href='star1hindi.html'><img src='star1hd.jpg' alt='Star 1 HD'></a>
+            <a href='star1hindi.html'>Star Sports 1 Hindi</a></div>
         
         <div class='directory-item'>
             <a href='starsports2hindi.html'><img src='star2.jpg' alt='Star Sports 2'></a>
