--- a/iplhin.html
+++ b/iplhin.html
@@ -171,7 +171,7 @@
     }
 
     // Retrieve the 'file' parameter from the URL, or use the default URL if none is provided
-    const hlsStreamUrl = getQueryParam("file") || "https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/hdntl=exp=1742896136~acl=%2f*~data=hdntl~hmac=92d2f2b1192cd44cfd3b95fe38a2ca6d5a68cefc4daa01ef25cf72618d6c0417/Sports18_1_HD_voot_MOB-audio_108038_eng=108000-video=2297600.m3u8";
+    const hlsStreamUrl = getQueryParam("file") || "https://mtsft.ruscfd.lat/720p.m3u8";
 
     // Initialize JW Player
     const playerInstance = jwplayer("jwplayerDiv");
