--- a/index.html
+++ b/index.html
@@ -116,7 +116,16 @@
     <h1>CineArena</h1>
     <div class="file-container">
 
-        <!--
+        <div class='directory-item'>
+            <a href='iplhin.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='iplhin.html'>IPL Hindi</a></div>
+
+       <!--
+        <div class='directory-item'>
+            <a href='ipleng.html'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='ipleng.html'>IPL English</a></div>
+
+        
         <div class='directory-item'>
             <a href='willow2.html'><img src='willow2hin.jpg' alt='Willow 2'></a>
             <a href='willow2.html'>Willow 2 Hindi</a></div>
