--- a/index.html
+++ b/index.html
@@ -117,6 +117,10 @@
     <div class="file-container">
 
         <div class='directory-item'>
+            <a href='wwe.html'><img src='wwe.jpg' alt='wwe'></a>
+            <a href='wwe.html'>WWE Network</a></div>
+
+        <div class='directory-item'>
             <a href='iplhin.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
             <a href='iplhin.html'>IPL Hindi</a></div>
 
