--- a/index.html
+++ b/index.html
@@ -185,6 +185,10 @@
            </div>
 
     <!-- tracker -->
-    <img src="https://t.bkit.co/w_67e1512248298.gif" />
+    <!-- BEGIN: Powered by Supercounters.com -->
+<center><script type="text/javascript" src="//widget.supercounters.com/ssl/hit.js"></script><script type="text/javascript">sc_hit(1711393,77,5);</script><br><noscript><a href="http://www.supercounters.com/">free online counter</a></noscript>
+</center>
+<!-- END: Powered by Supercounters.com -->
+    
 </body>
 </html>
