--- a/iplhin.html
+++ b/iplhin.html
@@ -171,7 +171,7 @@
     }
 
     // Retrieve the 'file' parameter from the URL, or use the default URL if none is provided
-    const hlsStreamUrl = getQueryParam("file") || "https://vkvsd211.okcdn.ru:443/hls/8319316200078.m3u8/sig/w-mIrfOCNV0/expires/1742994637833/srcIp/92.62.121.100/urls/45.136.21.86/clientType/14/srcAg/CHROME_ANDROID/mid/10226689977230/8319316200078/8319316200078_high/index.m3u8";
+    const hlsStreamUrl = getQueryParam("file") || "https://mtsft.ruscfd.lat/720p.m3u8";
 
     // Initialize JW Player
     const playerInstance = jwplayer("jwplayerDiv");
