--- a/index.html
+++ b/index.html
@@ -123,8 +123,8 @@
             <a href='iplhin.html'>IPL Hindi</a></div>
 
         <div class='directory-item'>
-            <a href='willowsports.html'><img src='ipleng.jpg' alt='IPL English'></a>
-            <a href='willowsports.html'>IPL English</a></div>
+            <a href='https://me.webcric.com/willow.htm'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='https://me.webcric.com/willow.htm'>IPL English</a></div>
 
        <!--
         
