--- a/star1hindi.html
+++ b/star1hindi.html
@@ -171,7 +171,7 @@
     }
 
     // Retrieve the 'file' parameter from the URL, or use the default URL if none is provided
-    const hlsStreamUrl = getQueryParam("file") || "https://vkvsd254.okcdn.ru/hls/8166031362602.m3u8/sig/5lIHb7hPi1Y/expires/1742844491196/srcIp/176.227.240.49/urls/185.226.53.95/clientType/14/srcAg/CHROME_ANDROID/mid/9670939388714/8166031362602/video.m3u8";
+    const hlsStreamUrl = getQueryParam("file") || "https://vkvsd261.okcdn.ru:443/hls/8172674746922.m3u8/sig/Q7tCqrcRC0M/expires/1742980284849/srcIp/176.227.240.79/urls/185.226.53.53/clientType/14/srcAg/CHROME_ANDROID/mid/9675436469034/8172674746922_high/index.m3u8";
 
     // Initialize JW Player
     const playerInstance = jwplayer("jwplayerDiv");
