--- a/iplhin.html
+++ b/iplhin.html
@@ -171,7 +171,7 @@
     }
 
     // Retrieve the 'file' parameter from the URL, or use the default URL if none is provided
-    const hlsStreamUrl = getQueryParam("file") || "https://mtsft.ruscfd.lat/720p.m3u8";
+    const hlsStreamUrl = getQueryParam("file") || "https://live.bgrid.in/arthur/master.m3u8";
 
     // Initialize JW Player
     const playerInstance = jwplayer("jwplayerDiv");
