--- a/ipleng.html
+++ b/ipleng.html
@@ -171,7 +171,7 @@
     }
 
     // Retrieve the 'file' parameter from the URL, or use the default URL if none is provided
-    const hlsStreamUrl = getQueryParam("file") || "https://1a-1791.com/live/v0xi25uh/slot-111/rgci-lz9s_1080p/chunklist_DVR.m3u8";
+    const hlsStreamUrl = getQueryParam("file") || "https://criccoder264.pages.dev/fox.m3u8";
 
     // Initialize JW Player
     const playerInstance = jwplayer("jwplayerDiv");
