--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
         
 
         <div class='directory-item'>
-            <a href='iplhin.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='iplhin.html'>IPL Hindi</a></div>
+            <a href='https://iframv2.embedxt.site/iframe/frame.php'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='https://iframv2.embedxt.site/iframe/frame.php'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='ipleng.html'><img src='ipleng.jpg' alt='IPL English'></a>
