--- a/star1hindi.html
+++ b/star1hindi.html
@@ -171,7 +171,7 @@
     }
 
     // Retrieve the 'file' parameter from the URL, or use the default URL if none is provided
-    const hlsStreamUrl = getQueryParam("file") || "https://cricstream4u.github.io/jwplyr/?file=https://myctxa.temycssme.wiki/720p.m3u8";
+    const hlsStreamUrl = getQueryParam("file") || "https://myctxa.temycssme.wiki/720p.m3u8";
 
     // Initialize JW Player
     const playerInstance = jwplayer("jwplayerDiv");
