--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
             <a href='wwe.html'>WWE Network</a></div>
         
         <div class='directory-item'>
-            <a href='ptv.html'><img src='ptv.jpg' alt='PTV'></a>
+            <a href='ptv.html'><img src='ptv1.jpg' alt='PTV'></a>
             <a href='ptv.html'>PTV</a></div>
         
         <div class='directory-item'>
