--- a/index.html
+++ b/index.html
@@ -217,7 +217,8 @@
            </div>
 
     <!-- tracker -->
-
+<script async="async" data-cfasync="false" src="//carryglanced.com/2346ffc02acfb9eb4451708a5df9f609/invoke.js"></script>
+<div id="container-2346ffc02acfb9eb4451708a5df9f609"></div>
     
 </body>
 </html>
