--- a/index.html
+++ b/index.html
@@ -155,6 +155,19 @@
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://live.tsports.com/mobile_hls/tsports_live_2/playlist.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://live.tsports.com/mobile_hls/tsports_live_2/playlist.m3u8'>IPL English</a></div>
 
+        <div class='directory-item'>
+            <a href='ipltamil.html'><img src='tamil.jpg' alt='IPL Tamil'></a>
+            <a href='ipltamil.html'>IPL Tamil</a></div>
+
+        <div class='directory-item'>
+            <a href='ipltelgu.html'><img src='telgu.jpg' alt='IPL Telgu'></a>
+            <a href='ipltelgu.html'>IPL Telugu</a></div>
+
+        <div class='directory-item'>
+            <a href='iplkanad.html'><img src='kanad.jpg' alt='IPL Kanad'></a>
+            <a href='iplkanad.html'>IPL Kanad</a></div>
+        
+
        <!--
         
 
