--- a/index.html
+++ b/index.html
@@ -142,7 +142,7 @@
     
 <body>
     <a href="https://t.me/cric_stream" class="telegram-toggle">Join Telegram</a>
-    <h1>CineArena</h1>
+    <h1>CricTv</h1>
     <div class="file-container">
 
         
