--- a/geosuper.html
+++ b/geosuper.html
@@ -60,5 +60,12 @@
         <button id="joinTelegramButton">Join Telegram</button>
       </a>
     </div>
+
+    <!--Adsterra-->
+    <script type='text/javascript' src='//carryglanced.com/9a/ef/51/9aef51d03afe6b1df2bbff95ef6e2364.js'></script>
+
+    <a href="https://carryglanced.com/z4n88t4j?key=595567d78e7bdb7315deab6ac7d759d6"></a>
+    
+    
   </body>
 </html>
