--- a/star1hindi.html
+++ b/star1hindi.html
@@ -449,6 +449,7 @@ function myFunction() {
 
             
         </center>
+    <div>
 
         <div style="background-color: #0074d9; text-align: center; padding: 10px;">
             <a href="https://t.me/cric_stream" target="_blank">
