--- a/star1hindi.html
+++ b/star1hindi.html
@@ -223,7 +223,7 @@ function myFunction() {
             
         </center>
 
-        <div style="background-color: #0074d9; text-align: center; padding: 10px;">
+        <div style="background-color: #0074d9; text-align: center; padding: 10px; color:fff;">
             <a href="https://t.me/cric_stream" target="_blank">Join Telegram 
             </a>
         </div>
