--- a/ipltamil.html
+++ b/ipltamil.html
@@ -62,5 +62,26 @@
             }
         }, 1000);
     </script>
+
+
+    <center>
+      <!-- BEGIN: Powered by Supercounters.com -->
+      <center><script type="text/javascript" src="//widget.supercounters.com/ssl/online_t.js"></script><script type="text/javascript">sc_online_t(1707487,"Users Online","170ddb");</script><br><noscript><a href="https://www.supercounters.com/">supercounters.com</a></noscript>
+      </center>
+      <!-- END: Powered by Supercounters.com -->
+    </center>
+
+    <div style="background-color: #0074d9; text-align: center; padding: 10px;">
+      <a href="https://t.me/cric_stream" target="_blank">
+        <button id="joinTelegramButton">Join Telegram</button>
+      </a>
+    </div>
+
+    <!--Adsterra-->
+    <script type='text/javascript' src='//carryglanced.com/9a/ef/51/9aef51d03afe6b1df2bbff95ef6e2364.js'></script>
+
+    <a href="https://carryglanced.com/z4n88t4j?key=595567d78e7bdb7315deab6ac7d759d6"></a>
+    
+    
 </body>
 </html>
