--- a/index.html
+++ b/index.html
@@ -148,8 +148,8 @@
         
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwiframe/'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='https://cricstream4u.github.io/jwiframe/'>IPL Hindi</a></div>
+            <a href='star1hindi.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='star1hindi.html'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='https://cricstream4u.github.io/jwplyr/?file=https://live.tsports.com/mobile_hls/tsports_live_2/playlist.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
