--- a/star1hindi.html
+++ b/star1hindi.html
@@ -26,6 +26,16 @@
             -ms-user-select: none;
             user-select: none;
         }
+
+        .sticky-footer {
+           position: fixed;
+           bottom: 0;
+           width: 100%;
+           background: #fff;
+           color: white;
+           text-align: center;
+           padding: 0px;
+        } 
     </style>
 </head>
 <body>
@@ -83,7 +93,20 @@
     <!--Adsterra-->
     <script type='text/javascript' src='//carryglanced.com/9a/ef/51/9aef51d03afe6b1df2bbff95ef6e2364.js'></script>
 
-    
+        <!-- 720*90 banner ads-->
+   
+    <div class="sticky-footer">
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'd57705b1f5d0f7abbb19cdb5dfe61249',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//carryglanced.com/d57705b1f5d0f7abbb19cdb5dfe61249/invoke.js"></script>
+    </div>
     
 </body>
 </html>
