--- a/wwe.html
+++ b/wwe.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- Popunder ads -->
+    <script type='text/javascript' src='//carryglanced.com/94/cb/a4/94cba44db07324ce70291446a18959c8.js'></script>
+    
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="Cric stream Favicon.jpg">
@@ -22,7 +25,15 @@
         position: relative; /* This makes the live label position relative to the video player */
       }
 
-     
+     .sticky-footer {
+           position: fixed;
+           bottom: 0;
+           width: 100%;
+           background: #fff;
+           color: white;
+           text-align: center;
+           padding: 0px;
+     }
     </style>
   </head>
   <body>
@@ -59,6 +70,21 @@
       <a href="https://t.me/cric_stream" target="_blank">
         <button id="joinTelegramButton">Join Telegram</button>
       </a>
+    </div>
+
+        <!-- 720*90 banner ads-->
+   
+    <div class="sticky-footer">
+    <script type="text/javascript">
+	atOptions = {
+		'key' : 'd57705b1f5d0f7abbb19cdb5dfe61249',
+		'format' : 'iframe',
+		'height' : 90,
+		'width' : 728,
+		'params' : {}
+	};
+</script>
+<script type="text/javascript" src="//carryglanced.com/d57705b1f5d0f7abbb19cdb5dfe61249/invoke.js"></script>
     </div>
   </body>
 </html>
