--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Popunder ads -->
+    <!-- Popunder ads
     <script type='text/javascript' src='//carryglanced.com/94/cb/a4/94cba44db07324ce70291446a18959c8.js'></script>
-    
+     -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Tg- @cric_stream</title>
@@ -233,12 +233,7 @@
            </div>
 
     <!-- tracker -->
-<script async="async" data-cfasync="false" src="//carryglanced.com/2346ffc02acfb9eb4451708a5df9f609/invoke.js"></script>
-<div id="container-2346ffc02acfb9eb4451708a5df9f609"></div>
 
-<a href="https://carryglanced.com/z4n88t4j?key=595567d78e7bdb7315deab6ac7d759d6"></a>
-<script type='text/javascript' src='//carryglanced.com/9a/ef/51/9aef51d03afe6b1df2bbff95ef6e2364.js'></script>
 
-    
 </body>
 </html>
