--- a/index.html
+++ b/index.html
@@ -232,7 +232,9 @@
       
            </div>
 
-    <!-- tracker -->
+    <!--Adsterra-->
+    <script type='text/javascript' src='//carryglanced.com/9a/ef/51/9aef51d03afe6b1df2bbff95ef6e2364.js'></script>
+
 
 
 </body>
