--- a/ipltamil.html
+++ b/ipltamil.html
@@ -90,7 +90,7 @@
       </a>
     </div>
 
-    <!--Adsterra-->
+    <!--Adsterra
     <script type='text/javascript' src='//carryglanced.com/9a/ef/51/9aef51d03afe6b1df2bbff95ef6e2364.js'></script>
 
         <!-- 720*90 banner ads-->
