--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             <a href='star1hindi.html'>IPL Hindi</a></div>
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live.tsports.com/mobile_hls/tsports_live_2/playlist.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://live.tsports.com/mobile_hls/tsports_live_2/playlist.m3u8'>IPL English</a></div>
+            <a href='https://cricstream4u.github.io/willow1/'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='https://cricstream4u.github.io/willow1/'>IPL English</a></div>
 
         <div class='directory-item'>
             <a href='ipltamil.html'><img src='tamil.jpg' alt='IPL Tamil'></a>
