--- a/star1hindi.html
+++ b/star1hindi.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <!-- Popunder ads -->
+    <!-- Popunder ads 
     <script type='text/javascript' src='//carryglanced.com/94/cb/a4/94cba44db07324ce70291446a18959c8.js'></script>
-    
+    -->
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="shortcut icon" type="image/x-icon" href="Cric stream Favicon.jpg">
