--- a/star1hindi.html
+++ b/star1hindi.html
@@ -93,6 +93,8 @@
     <!--Adsterra
     <script type='text/javascript' src='//carryglanced.com/9a/ef/51/9aef51d03afe6b1df2bbff95ef6e2364.js'></script>
 -->
+	<script async="async" data-cfasync="false" src="//carryglanced.com/2346ffc02acfb9eb4451708a5df9f609/invoke.js"></script>
+<div id="container-2346ffc02acfb9eb4451708a5df9f609"></div>
         <!-- 720*90 banner ads-->
    
     <div class="sticky-footer">
