--- a/iplhin.html
+++ b/iplhin.html
@@ -171,7 +171,7 @@
     }
 
     // Retrieve the 'file' parameter from the URL, or use the default URL if none is provided
-    const hlsStreamUrl = getQueryParam("file") || "https://live.bgrid.in/arthur/master.m3u8";
+    const hlsStreamUrl = getQueryParam("file") || "https://v18tataplaysyndication.akamaized.net/bpk-tv/Sports18_1_HD_voot_MOB/output03/index.m3u8?hdnea=exp=1743329188~acl=/*~hmac=2e5e99b1f5fffbedb82717dd9cc7d59fc00a335b3f66658a9a9cd0499f37e077";
 
     // Initialize JW Player
     const playerInstance = jwplayer("jwplayerDiv");
