--- a/index.html
+++ b/index.html
@@ -151,8 +151,8 @@
         
 
         <div class='directory-item'>
-            <a href='star1hindi.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
-            <a href='star1hindi.html'>IPL Hindi</a></div>
+            <a href='iplhin.html'><img src='iplhin.jpg' alt='IPL Hindi'></a>
+            <a href='iplhin.html'>IPL Hindi</a></div>
 
         <div class='directory-item'>
             <a href='https://cricstream4u.github.io/willow1/'><img src='ipleng.jpg' alt='IPL English'></a>
