--- a/index.html
+++ b/index.html
@@ -155,8 +155,8 @@
             <a href='iplhin.html'>IPL Hindi</a></div>
 
         <div class='directory-item'>
-            <a href='willow1.html'><img src='ipleng.jpg' alt='IPL English'></a>
-            <a href='willow1.html'>IPL English</a></div>
+            <a href='https://cricstream4u.guthub.io/willow1/'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='https://cricstream4u.guthub.io/willow1/'>IPL English</a></div>
 
         <div class='directory-item'>
             <a href='ipltamil.html'><img src='tamil.jpg' alt='IPL Tamil'></a>
