--- a/index.html
+++ b/index.html
@@ -217,8 +217,8 @@
             <a href='star1hindi.html'>IPL Hindi</a></div>
 
         <div class='directory-item'>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'><img src='ipleng.jpg' alt='IPL English'></a>
-            <a href='https://cricstream4u.github.io/jwplyr/?file=https://ee4ee8c03a26.eu-central-1.playback.live-video.net/api/video/v1/eu-central-1.755921704393.channel.LOohfipmCQDP.m3u8'>IPL English</a></div>
+            <a href='ipleng.html'><img src='ipleng.jpg' alt='IPL English'></a>
+            <a href='ipleng.html'>IPL English</a></div>
 
         <div class='directory-item'>
             <a href='ipltamil.html'><img src='tamil.jpg' alt='IPL Tamil'></a>
