--- a/index.html
+++ b/index.html
@@ -204,7 +204,7 @@
         <!-- Menu Section -->
     <div class="menu">
         <a href="https://cricstream4u.github.io/crictv/">Sports</a>
-        <a href="https://cinearena.live/">Music</a>
+        <a href="https://cinearena.github.io/music/">Music</a>
         <a href="#">Movies</a>
     </div>
    
